<resources>
    <string name="app_name">YadShniya</string>
    <string name="login">LOGIN</string>
    <string name="registration">REGISTRATION</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phoneNumber">Phone number</string>
    <string name="registerOption">"Don't have an account?"</string>
    <string name="signup">Sign up</string>
    <string name="accountExist">"Have an account?"</string>
    <string name="click"> Click here</string>
    <string name="register">Register</string>
    <string name="newPost">NEW POST</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="price">Price</string>
    <string name="post">Post</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
    <string name="pickPrice">HELP ME PICK A PRICE</string>

</resources>