<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
<!--        <ImageView-->
<!--            android:id="@+id/image_view"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintBaseline_toTopOf="parent"-->
<!--            />-->
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:layout_marginTop="150dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <EditText
            android:id="@+id/ed1"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:hint="@string/username"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1"
            />
        <EditText
            android:id="@+id/ed2"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:hint="@string/password"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed1"
            />
        <EditText
            android:id="@+id/ed3"
            android:layout_width="320dp"
            android:layout_height="50dp"
            android:layout_marginTop="35dp"
            android:hint="@string/phoneNumber"
            android:inputType="textPassword"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:longClickable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed2"
            />
        <Button
            android:id="@+id/btnrgs"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/dark_baby_pink"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ed3"
            />
        <TextView
            android:id="@+id/t1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints" />
        <LinearLayout
            android:id="@+id/lin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnrgs"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accountExist"
                android:textColor="@color/dark_baby_pink"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/login_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click"
                android:textColor="@color/dark_baby_pink"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>